--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-es2015": "^6.6.0",
     "coffee-script": "^1.10.0",
     "event-stream": "^3.3.2",
+    "fs": "0.0.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-coffee": "^2.3.1",
@@ -16,8 +17,10 @@
     "gulp-iconfont": "^6.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-rename": "^1.2.2",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^2.2.0",
+    "gulp-slim": "^0.3.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "imagemin-pngquant": "^4.2.2",
