--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
-  "dependencies": {},
+  "dependencies": {
+    "del": "^2.2.0"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "coffee-script": "^1.10.0",
+    "del": "^2.2.0",
     "event-stream": "^3.3.2",
     "fs": "0.0.2",
     "gulp": "^3.9.1",
@@ -17,14 +20,14 @@
     "gulp-iconfont": "^6.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-real-favicon": "^0.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^2.2.0",
     "gulp-slim": "^0.3.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "imagemin-pngquant": "^4.2.2",
-    "rimraf": "^2.5.2"
+    "imagemin-pngquant": "^4.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
