--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
+    "bourbon": "^4.2.7",
     "coffee-script": "^1.10.0",
     "del": "^2.2.0",
     "event-stream": "^3.3.2",
@@ -27,7 +28,9 @@
     "gulp-slim": "^0.3.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "imagemin-pngquant": "^4.2.2"
+    "imagemin-pngquant": "^4.2.2",
+    "jquery": "^3.1.0",
+    "normalize-css": "^2.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
